# ISSUES-TO-PR-AUTONOMOUS-AGENT

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
worker/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml  requirements-dev.txt  requirements.txt
worker/src/issue_to_pr_agent/: __init__.py  config.py  errors.py  job.py  main.py  pipeline.py  runtime_context.py
worker/src/issue_to_pr_agent/agent/: __init__.py  controller.py  executor.py  finalizer.py  loop.py  observation_budget.py  patch_strategy.py  planner.py  reflector.py  retry_policy.py  state.py  stopping.py  turn_budget.py
worker/src/issue_to_pr_agent/bootstrap/: __init__.py  install_tools.py  load_job.py  time_budget.py  validate_job.py  workspace.py
worker/src/issue_to_pr_agent/github/: __init__.py  branch_protection.py  branches.py  client.py  clone.py  comments.py  commits.py  installation_token.py  labels.py  pull_requests.py  worktree.py
worker/src/issue_to_pr_agent/inference/: __init__.py  coverage_detector.py  detector.py  docker_build.py  dockerfile_synthesizer.py  (+5 more)
worker/tests/: test_agent_loop.py  test_bootstrap.py  test_coverage_delta.py  test_dockerfile_synthesizer.py  test_forbidden_diff_check.py  test_github.py  test_language_detector.py  test_llm_router.py  test_observability.py  test_package_manager_detector.py  test_pipeline.py  test_pr_body_generator.py  test_repo_map.py  test_sandbox.py  test_secret_scanner.py  test_skeleton.py  test_storage.py  test_tools.py
(+323 files in other folders)
